--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
         <ul class="navlist">
             <li><a href="main.html">Home</a></li>
             <li><a href="project.html">Projects</a></li>
-            <li><a href="profil.html">Profil</a></li>
+           <!--<li><a href="profil.html">Profil</a></li>-->
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
@@ -59,8 +59,8 @@
 
     <div class="icons">
       <a href="#"><i class="ri-linkedin-line"></i></a>
-      <a href="#"><i class="ri-instagram-line"></i></a>
-      <a href="#"><i class="ri-twitch-line"></i></a>
+      <a href="https://www.instagram.com/swettleee/"><i class="ri-instagram-line"></i></a>
+      <a href="https://www.twitch.tv/swettleee"><i class="ri-twitch-line"></i></a>
     </div>
 
     <!--custom reveal link-->
