--- a/profil.html
+++ b/profil.html
@@ -16,51 +16,51 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-     
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Monoton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Monoton&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortFolio</title>
   </head>
 
-
   <body>
     <header>
-        <a href="#" class="logo">SWEETS'CORP</a>
+      <a href="#" class="logo">SWEETS'CORP</a>
 
-        <ul class="navlist">
-            <li><a href="main.html">Home</a></li>
-            <li><a href="project.html">Projects</a></li>
-            <li><a href="profil.html">Profil</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <ul class="navlist">
+        <li><a href="main.html">Home</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <!--<li><a href="profil.html">Profil</a></li>-->
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+      <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
     <section class="hero-profil">
-      <div class="hero-text-profil">
-      </div>
-      
-      <div class="hero-img-profil">
+      <div class="image-profil">
+        <img src="Images/moi.png" />
+        <p>
+          As a BTS SIO student, I'm passionate about creating beautiful user
+          interfaces and developing interactive websites. My main goal is to
+          combine my front-end development skills with my passion for graphic
+          design to provide exceptional user experiences and aesthetics.
+        </p>
+        <button class="cv">CV</button>
       </div>
     </section>
-
-    <div class="icons">
-      <a href="#"><i class="ri-linkedin-line"></i></a>
-      <a href="#"><i class="ri-instagram-line"></i></a>
-      <a href="#"><i class="ri-twitch-line"></i></a>
-    </div>
 
     <!--custom reveal link-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--custom js link-->
     <script src="js/script.js"></script>
-
   </body>
 </html>
