--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#" class="logo">SWEETS'CORP</a>
 
         <ul class="navlist">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="project.html">Projects</a></li>
            <!--<li><a href="profil.html">Profil</a></li>-->
             <li><a href="contact.html">Contact</a></li>
