change pic main

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       
       <div class="hero-img">
-        <img src="Images/1.png">
+        <img src="Images/moi.png">
       </div>
     </section>
 
