--- a/profil.html
+++ b/profil.html
@@ -38,6 +38,7 @@
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
         <li><a href="project.html">Projects</a></li>
+        <li><a href="mmi.html">Mmi</a></li>
         <!--<li><a href="profil.html">Profil</a></li>-->
         <li><a href="contact.html">Contact</a></li>
       </ul>
