Add text on mmi & on a project

--- a/mmi.html
+++ b/mmi.html
@@ -63,6 +63,9 @@
           <a href="javascript:void(0)" class="popup-btn" onclick="togglePopupComprendre()">Close</a>
         </div>
       </div>
+      <div class="more">
+        <p> Cette page est en pleine création ..</p>
+      </div>
     </section>
 
     <!--custom reveal link-->
