--- a/project.html
+++ b/project.html
@@ -144,6 +144,8 @@
 
         <div class="hero-text-pro">
             <h3> Developpement C# </h3>
+        </br>
+            <h3>more incoming ...</h3>
         </div>
         
       </section>
