--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
       <div class="hero-img">
         <img src="Images/moi.png">
       </div>
+
     </section>
 
     <div class="icons">
-      <a href="#"><i class="ri-linkedin-line"></i></a>
+      <a href="https://www.linkedin.com/in/rayan-telli-5a96a7273/"><i class="ri-linkedin-line"></i></a>
       <a href="https://www.instagram.com/swettleee/"><i class="ri-instagram-line"></i></a>
       <a href="https://www.twitch.tv/swettleee"><i class="ri-twitch-line"></i></a>
     </div>
+
 
     <!--custom reveal link-->
     <script src="https://unpkg.com/scrollreveal"></script>
