--- a/project.html
+++ b/project.html
@@ -144,6 +144,22 @@
 
         <div class="hero-text-pro">
             <h3> Developpement C# </h3>
+        </div>
+
+        <div class="hero-text-pro">
+            <h2>Draw Of Myself In Cartoon Style - PERSONAL PROJECT</h2>
+            <h4> My project involves creating a cartoon-style drawing of myself using the Procreate app on an iPad Pro 2022. I aim to capture my unique features and transform them into a fun and expressive version of myself. This project will allow me to develop my digital drawing skills while creating a playful representation of my personality.</h4>
+        </div>
+        
+        <div class="hero-img-pro" id="last">
+            <a href="Images/MoiDraw.jpg" target="_blank" onclick="return !window.open(this.href, 'Popup', 'width=800,height=600')">
+                <img src="Images/MoiDraw.jpg">
+            </a>
+        </div>
+        
+
+        <div class="hero-text-pro">
+            <h3> Drawing </h3>
         </br>
             <h3>more incoming ...</h3>
         </div>
