--- a/profil.html
+++ b/profil.html
@@ -33,7 +33,7 @@
 
   <body>
     <header>
-      <a href="#" class="logo">SWEETS'CORP</a>
+      <a href="index.html" class="logo">PROFIL</a>
 
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
