--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
 
   <body>
     <header>
-      <a href="#" class="logo">PROJECTS</a>
+      <a href="index.html" class="logo">PROJECTS</a>
 
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
