--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <body>
     <header>
-        <a href="#" class="logo">SWEETS'CORP</a>
+        <a href="index.html" class="logo">SWEETS'CORP</a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
