--- a/project.html
+++ b/project.html
@@ -65,6 +65,24 @@
         </div>
 
         <div class="hero-text-pro">
+            <h2>My Own business cards - PERSONAL PROJECT</h2>
+            <h4>I have created a personalized business card with my logo. The card showcases my professional information and presents a cohesive brand identity that leaves a lasting impression.</h4>
+        </div>
+        
+        <div class="hero-img-pro" id="last">
+            <a href="Images/MyCards.png" target="_blank" onclick="return !window.open(this.href, 'Popup', 'width=800,height=600')">
+                <img src="Images/MyCards.png">
+            </a>
+        </div>
+        
+
+        <div class="hero-text-pro">
+            <h3> Graphic Design </h3>
+        </br>
+            <h3>more incoming ...</h3>
+        </div>
+
+        <div class="hero-text-pro">
             <h2>Black Burger - Project</h2>
             <h4>I have created an illustration featuring a black burger to evoke wonder and gustatory excitement. By pushing the boundaries of traditional culinary aesthetics, I aimed to capture the audacity and originality of this unique culinary creation.</h4>
         </div>
