--- a/mmi.html
+++ b/mmi.html
@@ -49,10 +49,10 @@
     <section class="hero-mmi">
       <div class="container-mmi">
         <div class="box"><a href="#" id="Comprendre" onclick="togglePopupComprendre()"><h2>Comprendre</h2></a></div>
-        <div class="box"><a href="#" id="Concevoir" onclick="togglePopupComprendre()" ><h2>Concevoir</h2></a></div>
-        <div class="box"><a href="#" id="Exprimer" onclick="togglePopupComprendre()"><h2>Exprimer</h2></a></div>
-        <div class="box"><a href="#" id="Développer" onclick="togglePopupComprendre()"><h2>Développer</h2></a></div>
-        <div class="box"><a href="#" id="Entreprendre" onclick="togglePopupComprendre()"><h2>Entreprendre</h2></a></div>
+        <div class="box"><a href="#" id="Concevoir" onclick="togglePopupConcevoir()" ><h2>Concevoir</h2></a></div>
+        <div class="box"><a href="#" id="Exprimer" onclick="togglePopupExprimer()"><h2>Exprimer</h2></a></div>
+        <div class="box"><a href="#" id="Développer" onclick="togglePopupDevelopper()"><h2>Développer</h2></a></div>
+        <div class="box"><a href="#" id="Entreprendre" onclick="togglePopupEntreprendre()"><h2>Entreprendre</h2></a></div>
         <div class="box"></div>
       </div>
 
@@ -66,13 +66,53 @@
       <div class="more">
         <p> Cette page est en pleine création ..</p>
       </div>
+
+      <div id="popup-overlay2">
+        <div class="popup-content2">
+          <h2>Compétence : Concevoir</h2>
+          <p>test</p>
+          <a href="javascript:void(0)" class="popup-btn2" onclick="togglePopupConcevoir()">Close</a>
+        </div>
+      </div>
+      <div class="more">
+      </div>
+
+      <div id="popup-overlay3">
+        <div class="popup-content3">
+          <h2>Compétence : Exprimer</h2>
+          <p>test</p>
+          <a href="javascript:void(0)" class="popup-btn3" onclick="togglePopupExprimer()">Close</a>
+        </div>
+      </div>
+      <div class="more">
+      </div>
+
+      <div id="popup-overlay4">
+        <div class="popup-content4">
+          <h2>Compétence : Developper</h2>
+          <p>test</p>
+          <a href="javascript:void(0)" class="popup-btn4" onclick="togglePopupDevelopper()">Close</a>
+        </div>
+      </div>
+      <div class="more">
+      </div>
+
+      <div id="popup-overlay5">
+        <div class="popup-content5">
+          <h2>Compétence : Entreprendre</h2>
+          <p>test</p>
+          <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
+        </div>
+      </div>
+      <div class="more">
+      </div>
+
     </section>
 
     <!--custom reveal link-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--custom js link-->
     <script src="js/script.js"></script>
-
     <script src="js/popup.js"></script>
   </body>
 </html>
