--- a/mmi.html
+++ b/mmi.html
@@ -47,14 +47,22 @@
     </header>
 
     <section class="hero-mmi">
+      <div class="top-mmi">
+        <h2>COMPETENCE DEMANDER POUR LA SECTION MMI</h2>
+        <p>Dans ce portfolio, vous pouvez trouver les <span>5 compétences</span> demandées en section MMI et les projets liés : </p>
+        <p><span>Comprendre :</span> Comprendre les écosystèmes, les besoins des utilisateurs et les dispositifs de communication numérique. </p>
+        <p><span>Concevoir :</span> Concevoir ou co-concevoir une réponse stratégique pertinente à une problématique complexe.</p>
+        <p><span>Exprimer :</span> Exprimer un message avec les médias numériques pour informer et communiquer.</p>
+        <p><span>Développer :</span> Développer pour le web et les médias numériques.</p>
+        <p><span>Entreprendre :</span> Entreprendre dans le secteur du numérique.</p>
+      </div>
       <div class="container-mmi">
         <div class="box"><a href="#" id="Comprendre" onclick="togglePopupComprendre()"><h2>Comprendre</h2></a></div>
         <div class="box"><a href="#" id="Concevoir" onclick="togglePopupConcevoir()" ><h2>Concevoir</h2></a></div>
         <div class="box"><a href="#" id="Exprimer" onclick="togglePopupExprimer()"><h2>Exprimer</h2></a></div>
         <div class="box"><a href="#" id="Développer" onclick="togglePopupDevelopper()"><h2>Développer</h2></a></div>
         <div class="box"><a href="#" id="Entreprendre" onclick="togglePopupEntreprendre()"><h2>Entreprendre</h2></a></div>
-        <div class="box"></div>
-      </div>
+        <div class="box"><a href="#" id="Stages" onclick="togglePopupStage()"><h2>Stage</h2></a></div>
 
       <div id="popup-overlay">
         <div class="popup-content">
@@ -102,6 +110,16 @@
           <h2>Compétence : Entreprendre</h2>
           <p>test</p>
           <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
+        </div>
+      </div>
+      <div class="more">
+      </div>
+
+      <div id="popup-overlay6">
+        <div class="popup-content6">
+          <h2>Compétence : Stage</h2>
+          <p>test</p>
+          <a href="javascript:void(0)" class="popup-btn6" onclick="togglePopupStage()">Close</a>
         </div>
       </div>
       <div class="more">
