--- a/mmi.html
+++ b/mmi.html
@@ -66,7 +66,7 @@
 
       <div id="popup-overlay">
         <div class="popup-content">
-          <h2>Compétence : Comprendre</h2>
+          <h2>COMPRENDRE :</h2>
           <p>test</p>
           <a href="javascript:void(0)" class="popup-btn" onclick="togglePopupComprendre()">Close</a>
         </div>
