--- a/mmi.html
+++ b/mmi.html
@@ -48,7 +48,7 @@
 
     <section class="hero-mmi">
       <div class="top-mmi">
-        <h2>COMPETENCE DEMANDER POUR LA SECTION MMI</h2>
+        <h2>COMPETENCES SECTION MMI</h2>
         <p>Dans ce portfolio, vous pouvez trouver les <span>5 compétences</span> demandées en section MMI et les projets liés : </p>
         <p><span>Comprendre :</span> Comprendre les écosystèmes, les besoins des utilisateurs et les dispositifs de communication numérique. </p>
         <p><span>Concevoir :</span> Concevoir ou co-concevoir une réponse stratégique pertinente à une problématique complexe.</p>
