--- a/mmi.html
+++ b/mmi.html
@@ -97,13 +97,52 @@
 
       <div id="popup-overlay4">
         <div class="popup-content4">
-          <h2>Compétence : Developper</h2>
-          <p>test</p>
+          <h2>Developper</h2>
+          <p>---------------------------</p>
+          <p>Intégration de code pour créer des pages web en HTML, CSS, Javascript, PHP, MySql.</p>
+          <p>Lors d'un projet scolaire pendant les deux années de mon bts, nous avons du créés un site web simulant une boutique e-commerce.</p>
+          <p>A travers cette expérience de développement web j'ai appris à coder proprement, afin qu'on puisse comprendre mon code et j'ai également mis en oeuvre ce que j'avais appris durant mes cours de spécialité</p>
+          <p>Le projet m'a permis également d'augmenter mes capacités en CSS et javascript car je voulais vraiment un rendu estique et agréable</p>
+          <p>Le système d'ajout au panier est fonctionnel et toute la partie administrateur aussi (add/update/delete)</p>
+          <p> bien sur le site web est relié a une BDD sur phpmyadmin qui garde tous mes produits et mes stocks</p>
+          
+          <p>Intégration de code pour créer des pages web en HTML, CSS, Javascript, PHP, MySql.</p>
+          <p>Lors d'un projet scolaire pendant les deux années de mon bts, nous avons du créés un site web simulant une boutique e-commerce.</p>
+          <p>A travers cette expérience de développement web j'ai appris à coder proprement, afin qu'on puisse comprendre mon code et j'ai également mis en oeuvre ce que j'avais appris durant mes cours de spécialité</p>
+          <p>Le projet m'a permis également d'augmenter mes capacités en CSS et javascript car je voulais vraiment un rendu estique et agréable</p>
+          <p>Le système d'ajout au panier est fonctionnel et toute la partie administrateur aussi (add/update/delete)</p>
+          <p> bien sur le site web est relié a une BDD sur phpmyadmin qui garde tous mes produits et mes stocks</p> <p>Intégration de code pour créer des pages web en HTML, CSS, Javascript, PHP, MySql.</p>
+          <p>Lors d'un projet scolaire pendant les deux années de mon bts, nous avons du créés un site web simulant une boutique e-commerce.</p>
+          <p>A travers cette expérience de développement web j'ai appris à coder proprement, afin qu'on puisse comprendre mon code et j'ai également mis en oeuvre ce que j'avais appris durant mes cours de spécialité</p>
+          <p>Le projet m'a permis également d'augmenter mes capacités en CSS et javascript car je voulais vraiment un rendu estique et agréable</p>
+          <p>Le système d'ajout au panier est fonctionnel et toute la partie administrateur aussi (add/update/delete)</p>
+          <p> bien sur le site web est relié a une BDD sur phpmyadmin qui garde tous mes produits et mes stocks</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-1" src="Images/Accueil.png">
+                <img id="slide-2" src="Images/Produits.png">
+                <img id="slide-3" src="Images/Panier.png">
+                <img id="slide-4" src="Images/Login.png">
+                <img id="slide-5" src="Images/Admin.png">
+                <img id="slide-6" src="Images/Tableau.png">
+                <img id="slide-7" src="Images/Modif.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
+                <a href="#slide-6"></a>
+                <a href="#slide-7"></a>
+              </div>
+            </div>
+          </section>
           <a href="javascript:void(0)" class="popup-btn4" onclick="togglePopupDevelopper()">Close</a>
         </div>
       </div>
-      <div class="more">
-      </div>
+
 
       <div id="popup-overlay5">
         <div class="popup-content5">
@@ -132,5 +171,10 @@
     <!--custom js link-->
     <script src="js/script.js"></script>
     <script src="js/popup.js"></script>
+    <script
+			  src="https://code.jquery.com/jquery-3.7.0.js"
+			  integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+			  crossorigin="anonymous"></script>
+		
   </body>
 </html>
