--- a/project.html
+++ b/project.html
@@ -250,7 +250,7 @@
         
         <div class="hero-img-pro" id="last">
             <a href="Images/Apple.png" target="_blank" onclick="return !window.open(this.href, 'Popup', 'width=800,height=600')">
-                <img src="Images/Apple.png<">
+                <img src="Images/Apple.png">
             </a>
         </div>
         
