--- a/mmi.html
+++ b/mmi.html
@@ -67,37 +67,79 @@
       <div id="popup-overlay">
         <div class="popup-content">
           <h2>COMPRENDRE :</h2>
-          <p>test</p>
-          <a href="javascript:void(0)" class="popup-btn" onclick="togglePopupComprendre()">Close</a>
+          <p>---------------------------</p>
+          <p class="gras">Utiliser plusieurs outils de graphisme pour créer des morceaux de médias pour informer, communiquer, promouvoir.</p>
+          <p>j'ai réaliser plusieurs projets pour promouvoir un produit avec l'aide de certains élèments placer a des endroits bien précis pour attirer l'oeil dessus</p>
+          <p>ces projets ont permis d'augmenter mes compétences photoshop et illustrator</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-s1" src="Images/s1.png">
+                <img id="slide-s2" src="Images/s2.png">
+                <img id="slide-s3" src="Images/s3.png">
+                <img id="slide-s4" src="Images/s4.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-s1"></a>
+                <a href="#slide-s2"></a>
+                <a href="#slide-s3"></a>
+                <a href="#slide-s4"></a>
+              </div>
+            </div>
+          </section>
+          <a href="javascript:void(0)" class="popup-btn3" onclick="togglePopupComprendre()">Close</a>
         </div>
-      </div>
-      <div class="more">
-        <p> Cette page est en pleine création ..</p>
       </div>
 
       <div id="popup-overlay2">
         <div class="popup-content2">
-          <h2>Compétence : Concevoir</h2>
-          <p>test</p>
+          <h2>Concevoir Une Affiche promotionnel</h2>
+          <p>---------------------------</p>
+          <p>Ces exercices de création graphique m'ont permis de produire des contenus qui respectent les demandes attendues tel qu'une future date, ou encore la vente d'un smartphone.</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-g1" src="Images/flo.png">
+                <img id="slide-g2" src="Images/Apple.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-g1"></a>
+                <a href="#slide-g2"></a>
+              </div>
+            </div>
+          </section>
           <a href="javascript:void(0)" class="popup-btn2" onclick="togglePopupConcevoir()">Close</a>
         </div>
-      </div>
-      <div class="more">
       </div>
 
       <div id="popup-overlay3">
         <div class="popup-content3">
-          <h2>Compétence : Exprimer</h2>
-          <p>test</p>
+          <h2>Exprimer</h2>
+          <p>---------------------------</p>
+          <p class="gras">Utiliser plusieurs outils de graphisme pour créer des morceaux de médias pour informer, communiquer, promouvoir.</p>
+          <p>j'ai réaliser plusieurs projets pour promouvoir un produit avec l'aide de certains élèments placer a des endroits bien précis pour attirer l'oeil dessus</p>
+          <p>ces projets ont permis d'augmenter mes compétences photoshop et</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-g3" src="Images/3.png">
+                <img id="slide-g4" src="Images/4.png">
+                <img id="slide-g5" src="Images/5.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-g3"></a>
+                <a href="#slide-g4"></a>
+                <a href="#slide-g5"></a>
+              </div>
+            </div>
+          </section>
           <a href="javascript:void(0)" class="popup-btn3" onclick="togglePopupExprimer()">Close</a>
         </div>
-      </div>
-      <div class="more">
       </div>
 
       <div id="popup-overlay4">
         <div class="popup-content4">
-          <h2>Developper</h2>
+          <h2>Développer Un Site Web</h2>
           <p>---------------------------</p>
           <p>Intégration de code pour créer des pages web en HTML, CSS, Javascript, PHP, MySql.</p>
           <p>Lors d'un projet scolaire pendant les deux années de mon bts, nous avons du créés un site web simulant une boutique e-commerce.</p>
@@ -105,7 +147,6 @@
           <p>Le projet m'a permis également d'augmenter mes capacités en CSS et javascript car je voulais vraiment un rendu estique et agréable</p>
           <p>Le système d'ajout au panier est fonctionnel et toute la partie administrateur aussi (add/update/delete)</p>
           <p>bien sur le site web est relié a une BDD sur phpmyadmin qui garde tous mes produits et mes stocks</p>
-
           
           <section class="container-slider">
             <div class="slider-wrapper">
@@ -129,6 +170,40 @@
               </div>
             </div>
           </section>
+
+          
+          <h2>Développer Une application</h2>
+          <p>---------------------------</p>
+          <p>L'objectif était de crée une application en c# permettant de gerer les stocks, add/update/delete, gerer les clients depuis un ordinateur sans passer sur le site</p>
+          <p>A travers cette expérience de développement d'application j'ai mis en oeuvre ce que j'avais appris durant mes cours de spécialité c#</p>
+          <p>Le projet m'a permis également de confirmer mes compétences en c# et Vb ( effectuer en vb la première fois)</p>
+          <p>Un système d'impression de pdf est disponible pour les clients, les produits ou les commandes..</p>
+          <p>L'application est reliée a la BDD du site web</p>
+
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-c1" src="Images/c1.png">
+                <img id="slide-c2" src="Images/c2.png">
+                <img id="slide-c3" src="Images/c3.png">
+                <img id="slide-c4" src="Images/c4.png">
+                <img id="slide-c5" src="Images/c5.png">
+                <img id="slide-c6" src="Images/c6.png">
+                <img id="slide-c7" src="Images/c7.png">
+                <img id="slide-c8" src="Images/c8.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-c1"></a>
+                <a href="#slide-c2"></a>
+                <a href="#slide-c3"></a>
+                <a href="#slide-c4"></a>
+                <a href="#slide-c5"></a>
+                <a href="#slide-c6"></a>
+                <a href="#slide-c7"></a>
+                <a href="#slide-c8"></a>
+              </div>
+            </div>
+          </section>
           <a href="javascript:void(0)" class="popup-btn4" onclick="togglePopupDevelopper()">Close</a>
         </div>
       </div>
@@ -141,8 +216,6 @@
           <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
         </div>
       </div>
-      <div class="more">
-      </div>
 
       <div id="popup-overlay6">
         <div class="popup-content6">
@@ -150,8 +223,6 @@
           <p>test</p>
           <a href="javascript:void(0)" class="popup-btn6" onclick="togglePopupStage()">Close</a>
         </div>
-      </div>
-      <div class="more">
       </div>
 
     </section>
