s add to projects

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="mmi.html">Mmi</a></li>
            <!--<li><a href="profil.html">Profil</a></li>-->
             <li><a href="contact.html">Contact</a></li>
@@ -49,7 +49,7 @@
         <h4>BORN TO</h4>
         <h1>DESIGN</h1>
         <p>As a graphic designer and web developer, <br>I bring digital visions to life with a seamless fusion of creativity and code.</p>
-        <a href="project.html">Last Project</a>
+        <a href="projects.html">Last Project</a>
         <a href="contact.html" class="ctaa"><i class="ri-play-fill"></i> Wanna Work With Me ?</a>
       </div>
       
