--- a/mmi.html
+++ b/mmi.html
@@ -37,7 +37,7 @@
 
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="project.html">Projects</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="mmi.html">Mmi</a></li>
         <!--<li><a href="profil.html">Profil</a></li>-->
         <li><a href="contact.html">Contact</a></li>
@@ -68,9 +68,10 @@
         <div class="popup-content">
           <h2>COMPRENDRE :</h2>
           <p>---------------------------</p>
-          <p class="gras">Utiliser plusieurs outils de graphisme pour créer des morceaux de médias pour informer, communiquer, promouvoir.</p>
-          <p>j'ai réaliser plusieurs projets pour promouvoir un produit avec l'aide de certains élèments placer a des endroits bien précis pour attirer l'oeil dessus</p>
-          <p>ces projets ont permis d'augmenter mes compétences photoshop et illustrator</p>
+          <p class="gras">Réalisation d'un formulaire pour récolter et analyser les besoins des utilisateurs d'une application.</p>
+          <p>j'ai réalisé un formulaire avec Google Form sur les graphistes freelance, pour connaître les avis des utilisateurs sur le sujet puis j'ai analysé leurs réponses. </p>
+          <p>Ce travail m'a permis d'analyser, de comprendre et d'interpréter l'avis des utilisateurs d'une plateforme numérique.</p>
+          <p>Plusieurs fois il m'arrive de créer des formulaires googles pour analyser la manière de penser de certaines personnes et ainsi agir dans leurs besoins</p>
           <section class="container-slider">
             <div class="slider-wrapper">
               <div class="slider">
@@ -211,16 +212,27 @@
 
       <div id="popup-overlay5">
         <div class="popup-content5">
-          <h2>Compétence : Entreprendre</h2>
-          <p>test</p>
-          <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
-        </div>
-      </div>
-
-      <div id="popup-overlay6">
-        <div class="popup-content6">
-          <h2>Compétence : Stage</h2>
-          <p>test</p>
+          <p>---------------------------</p>
+          <p class="gras">Réalisation d'un formulaire pour récolter et analyser les besoins des utilisateurs d'une application.</p>
+          <p>j'ai réalisé un formulaire avec Google Form sur les graphistes freelance, pour connaître les avis des utilisateurs sur le sujet puis j'ai analysé leurs réponses. </p>
+          <p>Ce travail m'a permis d'analyser, de comprendre et d'interpréter l'avis des utilisateurs d'une plateforme numérique.</p>
+          <p>Plusieurs fois il m'arrive de créer des formulaires googles pour analyser la manière de penser de certaines personnes et ainsi agir dans leurs besoins</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-s1" src="Images/s1.png">
+                <img id="slide-s2" src="Images/s2.png">
+                <img id="slide-s3" src="Images/s3.png">
+                <img id="slide-s4" src="Images/s4.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-s1"></a>
+                <a href="#slide-s2"></a>
+                <a href="#slide-s3"></a>
+                <a href="#slide-s4"></a>
+              </div>
+            </div>
+          </section>
           <a href="javascript:void(0)" class="popup-btn6" onclick="togglePopupStage()">Close</a>
         </div>
       </div>
