--- a/mmi.html
+++ b/mmi.html
@@ -25,11 +25,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Monoton&family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortFolio</title>
-    
+
   </head>
 
   <body>
