--- a/mmi.html
+++ b/mmi.html
@@ -50,11 +50,11 @@
       <div class="top-mmi">
         <h2>COMPETENCES SECTION MMI</h2>
         <p>Dans ce portfolio, vous pouvez trouver les <span>5 compétences</span> demandées en section MMI et les projets liés : </p>
-        <p><span>Comprendre :</span> Comprendre les écosystèmes, les besoins des utilisateurs et les dispositifs de communication numérique. </p>
-        <p><span>Concevoir :</span> Concevoir ou co-concevoir une réponse stratégique pertinente à une problématique complexe.</p>
-        <p><span>Exprimer :</span> Exprimer un message avec les médias numériques pour informer et communiquer.</p>
-        <p><span>Développer :</span> Développer pour le web et les médias numériques.</p>
-        <p><span>Entreprendre :</span> Entreprendre dans le secteur du numérique.</p>
+        <p><span>Comprendre</span> les écosystèmes, les besoins des utilisateurs et les dispositifs de communication numérique. </p>
+        <p><span>Concevoir</span> ou co-concevoir une réponse stratégique pertinente à une problématique complexe.</p>
+        <p><span>Exprimer</span> un message avec les médias numériques pour informer et communiquer.</p>
+        <p><span>Développer</span> pour le web et les médias numériques.</p>
+        <p><span>Entreprendre</span> dans le secteur du numérique.</p>
       </div>
       <div class="container-mmi">
         <div class="box"><a href="#" id="Comprendre" onclick="togglePopupComprendre()"><h2>Comprendre</h2></a></div>
@@ -212,30 +212,35 @@
 
       <div id="popup-overlay5">
         <div class="popup-content5">
+          <h2>ENTREPRENDRE</h2>
           <p>---------------------------</p>
-          <p class="gras">Réalisation d'un formulaire pour récolter et analyser les besoins des utilisateurs d'une application.</p>
-          <p>j'ai réalisé un formulaire avec Google Form sur les graphistes freelance, pour connaître les avis des utilisateurs sur le sujet puis j'ai analysé leurs réponses. </p>
-          <p>Ce travail m'a permis d'analyser, de comprendre et d'interpréter l'avis des utilisateurs d'une plateforme numérique.</p>
-          <p>Plusieurs fois il m'arrive de créer des formulaires googles pour analyser la manière de penser de certaines personnes et ainsi agir dans leurs besoins</p>
-          <section class="container-slider">
-            <div class="slider-wrapper">
-              <div class="slider">
-                <img id="slide-s1" src="Images/s1.png">
-                <img id="slide-s2" src="Images/s2.png">
-                <img id="slide-s3" src="Images/s3.png">
-                <img id="slide-s4" src="Images/s4.png">
-              </div>
-              <div class="slider-nav">
-                <a href="#slide-s1"></a>
-                <a href="#slide-s2"></a>
-                <a href="#slide-s3"></a>
-                <a href="#slide-s4"></a>
-              </div>
-            </div>
-          </section>
-          <a href="javascript:void(0)" class="popup-btn6" onclick="togglePopupStage()">Close</a>
+          <p>Projet vidéo en court de réalisation, estimé a juillet 2023.</p>
+          <p class="gras">Titre de la vidéo : Découvrez l'art du graphisme : Ouvrez les portes de la créativité !</p>
+          <p>
+
+            <span class="gras2">Introduction :
+            [Plan de montage dynamique montrant des exemples de créations graphiques attrayantes]</span>
+            Rayan : Bienvenue dans notre vidéo dédiée à l'apprentissage du graphisme, un monde où l'imagination et la créativité se rencontrent pour donner vie à des chefs-d'œuvre visuels. Aujourd'hui, nous allons vous présenter les bases du graphisme, ses avantages et vous montrer comment vous pouvez vous lancer dans cette aventure artistique.
+          </br></br>
+            <span class="gras2">Partie 1 : Qu'est-ce que le graphisme ?
+            [Plan de montage montrant différents types de graphismes, tels que le design d'interface, la typographie, l'illustration, etc.]</span>
+            Rayan : Le graphisme est l'art de communiquer visuellement à travers des éléments graphiques tels que la typographie, les illustrations, les images et les couleurs. Il joue un rôle essentiel dans notre société moderne, où les images et les designs sont omniprésents. Que ce soit dans les publicités, les sites web, les applications ou même les emballages de produits, le graphisme est partout !
+          </br></br>
+          <span class="gras2">Partie 2 : Les avantages de l'apprentissage du graphisme
+            [Plan de montage montrant des exemples de projets réalisés par des graphistes talentueux]</span>
+            Rayan : Apprendre le graphisme peut vous offrir de nombreuses opportunités. Tout d'abord, cela vous permet d'exprimer votre créativité de manière unique. Vous pouvez donner vie à vos idées, raconter des histoires et susciter des émotions à travers vos créations. Ensuite, le graphisme est une compétence recherchée dans de nombreux domaines, tels que la publicité, le marketing, l'industrie du jeu vidéo et même le cinéma. C'est une voie passionnante qui peut vous ouvrir les portes de carrières stimulantes et enrichissantes.
+          </br></br>
+          <span class="gras2">Partie 3 : Comment commencer dans le graphisme ?
+            [Plan de montage montrant différentes étapes d'apprentissage, comme la pratique, les tutoriels en ligne, l'expérimentation, etc.]</span>
+            Rayan : Vous êtes intéressé par le graphisme ? Voici quelques étapes pour vous aider à démarrer. Tout d'abord, pratiquez régulièrement en réalisant des projets personnels. Cela vous permettra de vous familiariser avec les outils et de développer votre style unique. Ensuite, profitez des nombreuses ressources en ligne, telles que les tutoriels, les cours en ligne et les forums spécialisés. Ils vous aideront à acquérir de nouvelles compétences et à rester inspiré. N'ayez pas peur d'expérimenter et de sortir de votre zone de confort, car c'est ainsi que vous progresserez et développerez votre propre style graphique.
+          </br></br>
+          <span class="gras2"> Conclusion :
+            [Plan de montage montrant des exemples de réalisations de personnes qui ont appris le graphisme]</span>
+            Rayan : En conclusion, l'apprentissage du graphisme est une aventure passionnante qui peut vous permettre de libérer votre créativité et de vous ouvrir de nombreuses portes. Que vous souhaitiez poursuivre une carrière en tant que graphiste professionnel ou simplement vous amuser en créant des designs uniques, le graphisme offre de nombreuses possibilités. Alors n'attendez plus, lancez-vous dans cette belle aventure artistique !</p>
+          <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
         </div>
       </div>
+
 
     </section>
 
