--- a/mmi.html
+++ b/mmi.html
@@ -214,7 +214,7 @@
         <div class="popup-content5">
           <h2>ENTREPRENDRE</h2>
           <p>---------------------------</p>
-          <p>Projet vidéo en court de réalisation, estimé a juillet 2023.</p>
+          <p>Projet vidéo en cours de réalisation, estimé à Juillet 2023.</p>
           <p class="gras">Titre de la vidéo : Découvrez l'art du graphisme : Ouvrez les portes de la créativité !</p>
           <p>
 
