--- a/mmi.html
+++ b/mmi.html
@@ -94,7 +94,7 @@
 
       <div id="popup-overlay2">
         <div class="popup-content2">
-          <h2>Concevoir Une Affiche promotionnel</h2>
+          <h2>CONCEVOIR ET PROMOUVOIR</h2>
           <p>---------------------------</p>
           <p>Ces exercices de création graphique m'ont permis de produire des contenus qui respectent les demandes attendues tel qu'une future date, ou encore la vente d'un smartphone.</p>
           <section class="container-slider">
