--- a/mmi.html
+++ b/mmi.html
@@ -96,7 +96,7 @@
         <div class="popup-content2">
           <h2>CONCEVOIR ET PROMOUVOIR</h2>
           <p>---------------------------</p>
-          <p>Ces exercices de création graphique m'ont permis de produire des contenus qui respectent les demandes attendues tel qu'une future date, ou encore la vente d'un smartphone.</p>
+          <p>Ces exercices de création graphique m'ont permis de produire des contenus qui respectent les demandes attendues telles qu'une future date, ou encore la vente d'un smartphone.</p>
           <section class="container-slider">
             <div class="slider-wrapper">
               <div class="slider">
@@ -238,6 +238,53 @@
             [Plan de montage montrant des exemples de réalisations de personnes qui ont appris le graphisme]</span>
             Rayan : En conclusion, l'apprentissage du graphisme est une aventure passionnante qui peut vous permettre de libérer votre créativité et de vous ouvrir de nombreuses portes. Que vous souhaitiez poursuivre une carrière en tant que graphiste professionnel ou simplement vous amuser en créant des designs uniques, le graphisme offre de nombreuses possibilités. Alors n'attendez plus, lancez-vous dans cette belle aventure artistique !</p>
           <a href="javascript:void(0)" class="popup-btn5" onclick="togglePopupEntreprendre()">Close</a>
+        </div>
+      </div>
+
+      <div id="popup-overlay6">
+        <div class="popup-content6">
+          <h2>STAGES SIO (1 mois et 3 semaines chacun)</h2>
+          <p>---------------------------</p>
+          <H2 class="gras">Stage première année sio :</H2>
+          <p>réalisation d'un site web en html css php pour un restaurant situer a béziers : Le Manteau Bleu</p>
+          <P> avec système de connexion pour la partie administrateur et ainsi modifier les menus ou toutes informations sur le site</P>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-m1" src="Images/m1.png">
+                <img id="slide-m2" src="Images/m2.png">
+                <img id="slide-m3" src="Images/M3.png">
+                <img id="slide-m4" src="Images/m4.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-m1"></a>
+                <a href="#slide-m2"></a>
+                <a href="#slide-m3"></a>
+                <a href="#slide-m4"></a>
+              </div>
+            </div>
+          </section>
+
+          <h2 class="gras">Stage deuxième année sio : PARTIE DEUX</h2>
+          <p> réalisation d'un second site web mais cette fois-ci pour une association a lespignan qui loue des parcelles de jardins aux habitants de lespignan qui n'en disposent pas d'un</p>
+          <p> réalisé avec wordpress également</p>
+          <section class="container-slider">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <img id="slide-a1" src="Images/a1.png">
+                <img id="slide-a2" src="Images/a2.png">
+                <img id="slide-a3" src="Images/a3.png">
+                <img id="slide-a4" src="Images/a4.png">
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-a1"></a>
+                <a href="#slide-a2"></a>
+                <a href="#slide-a3"></a>
+                <a href="#slide-a4"></a>
+              </div>
+            </div>
+          </section>
+          <a href="javascript:void(0)" class="popup-btn6" onclick="togglePopupStage()">Close</a>
         </div>
       </div>
 
