--- a/mmi.html
+++ b/mmi.html
@@ -115,11 +115,11 @@
 
       <div id="popup-overlay3">
         <div class="popup-content3">
-          <h2>Exprimer</h2>
+          <h2>EXPRIMER</h2>
           <p>---------------------------</p>
           <p class="gras">Utiliser plusieurs outils de graphisme pour créer des morceaux de médias pour informer, communiquer, promouvoir.</p>
-          <p>j'ai réaliser plusieurs projets pour promouvoir un produit avec l'aide de certains élèments placer a des endroits bien précis pour attirer l'oeil dessus</p>
-          <p>ces projets ont permis d'augmenter mes compétences photoshop et</p>
+          <p>J'ai réalisé plusieurs projets pour promouvoir un produit, à l'aide de certains éléments, placés à des endroits aillant pour obectif d'attirer l'oeil du spectateurs</p>
+          <p>Ces projets ont permis d'augmenter mes compétences photoshop et illustrator avec les outils tels que détourage, Intégration etc..</p>
           <section class="container-slider">
             <div class="slider-wrapper">
               <div class="slider">
@@ -140,14 +140,14 @@
 
       <div id="popup-overlay4">
         <div class="popup-content4">
-          <h2>Développer Un Site Web</h2>
+          <h2>Développer un site web</h2>
           <p>---------------------------</p>
           <p>Intégration de code pour créer des pages web en HTML, CSS, Javascript, PHP, MySql.</p>
-          <p>Lors d'un projet scolaire pendant les deux années de mon bts, nous avons du créés un site web simulant une boutique e-commerce.</p>
-          <p>A travers cette expérience de développement web j'ai appris à coder proprement, afin qu'on puisse comprendre mon code et j'ai également mis en oeuvre ce que j'avais appris durant mes cours de spécialité</p>
-          <p>Le projet m'a permis également d'augmenter mes capacités en CSS et javascript car je voulais vraiment un rendu estique et agréable</p>
-          <p>Le système d'ajout au panier est fonctionnel et toute la partie administrateur aussi (add/update/delete)</p>
-          <p>bien sur le site web est relié a une BDD sur phpmyadmin qui garde tous mes produits et mes stocks</p>
+          <p>Lors d'un projet scolaire pendant les deux années de mon BTS, nous devions créés un site web simulant une boutique e-commerce.</p>
+          <p>À travers cette expérience de développement web, j'ai appris à codé proprement afin que l'on puisse comprendre mon code. J'ai également mis-en-oeuvre ce que j'avais appris durant mes cours de spécialité.</p>
+          <p>Le projet m'a également permis d'augmenter mes capacités en CSS et javascript pour obtenir un rendu esthétique et agréable.</p>
+          <p>Le système d'ajout au panier est fonctionnel ainsi que toute la partie administrateur (add/update/delete).</p>
+          <p>Le site web est relié à une BDD sur phpmyadmin qui garde toutes les informations sur mes produits et mes clients.</p>
           
           <section class="container-slider">
             <div class="slider-wrapper">
@@ -173,13 +173,13 @@
           </section>
 
           
-          <h2>Développer Une application</h2>
+          <h2>Développer une application</h2>
           <p>---------------------------</p>
-          <p>L'objectif était de crée une application en c# permettant de gerer les stocks, add/update/delete, gerer les clients depuis un ordinateur sans passer sur le site</p>
-          <p>A travers cette expérience de développement d'application j'ai mis en oeuvre ce que j'avais appris durant mes cours de spécialité c#</p>
-          <p>Le projet m'a permis également de confirmer mes compétences en c# et Vb ( effectuer en vb la première fois)</p>
-          <p>Un système d'impression de pdf est disponible pour les clients, les produits ou les commandes..</p>
-          <p>L'application est reliée a la BDD du site web</p>
+          <p>L'objectif était de créer une application en C# permettant de gérer les stocks, add/update/delete, gérer les clients depuis un ordinateur sans passer sur le site.</p>
+          <p>À travers cette expérience de développement d'application j'ai mis-en-oeuvre les connaissances acquises durant mes cours de spécialité C#.</p>
+          <p>Le projet m'a également permis de confirmer mes compétences en C# et VB (effectué en VB la première fois).</p>
+          <p>Un système d'impression de PDF est disponible pour les clients, les produits ou les commandes.</p>
+          <p>L'application est reliée à la BDD du site web.</p>
 
           <section class="container-slider">
             <div class="slider-wrapper">
@@ -243,11 +243,11 @@
 
       <div id="popup-overlay6">
         <div class="popup-content6">
-          <h2>STAGES SIO (1 mois et 3 semaines chacun)</h2>
+          <h2>STAGES SIO <span class="titre-secondaire">(un mois et trois semaines pour chaque stage).</span></h2>
           <p>---------------------------</p>
-          <H2 class="gras">Stage première année sio :</H2>
-          <p>réalisation d'un site web en html css php pour un restaurant situer a béziers : Le Manteau Bleu</p>
-          <P> avec système de connexion pour la partie administrateur et ainsi modifier les menus ou toutes informations sur le site</P>
+          <H2 class="gras">Stage première année SIO : PARTIE UNE</H2>
+          <p>Réalisation d'un site web en html, css, php, pour un restaurant situé à Béziers : Le Manteau Bleu.</p>
+          <P>Un système de connexion pour la partie administrateur qui permet de modifier les menus et/où toutes informations sur le site.</P>
           <section class="container-slider">
             <div class="slider-wrapper">
               <div class="slider">
@@ -265,9 +265,9 @@
             </div>
           </section>
 
-          <h2 class="gras">Stage deuxième année sio : PARTIE DEUX</h2>
-          <p> réalisation d'un second site web mais cette fois-ci pour une association a lespignan qui loue des parcelles de jardins aux habitants de lespignan qui n'en disposent pas d'un</p>
-          <p> réalisé avec wordpress également</p>
+          <h2 class="gras">Stage deuxième année SIO : PARTIE DEUX</h2>
+          <p> Réalisation d'un second site web à vocation d'une association à Lespignan, qui loue des parcelles de jardins aux habitants ses habitants qui n'en disposent pas.</p>
+          <p> Réalisé avec wordpress également.</p>
           <section class="container-slider">
             <div class="slider-wrapper">
               <div class="slider">
