--- a/mmi.html
+++ b/mmi.html
@@ -69,7 +69,7 @@
           <h2>COMPRENDRE :</h2>
           <p>---------------------------</p>
           <p class="gras">Réalisation d'un formulaire pour récolter et analyser les besoins des utilisateurs d'une application.</p>
-          <p>j'ai réalisé un formulaire avec Google Form sur les graphistes freelance, pour connaître les avis des utilisateurs sur le sujet puis j'ai analysé leurs réponses. </p>
+          <p>J'ai réalisé un formulaire avec Google Form sur les graphistes freelance, pour connaître les avis des utilisateurs sur le sujet puis j'ai analysé leurs réponses. </p>
           <p>Ce travail m'a permis d'analyser, de comprendre et d'interpréter l'avis des utilisateurs d'une plateforme numérique.</p>
           <p>Plusieurs fois il m'arrive de créer des formulaires googles pour analyser la manière de penser de certaines personnes et ainsi agir dans leurs besoins</p>
           <section class="container-slider">
