--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 
     <!--css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/images/snake.ico">
     <!--boxicons-->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
