--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFolio</title>
+    <title>PortFolio Rayan Telli</title>
   </head>
   <body>
     <header>
