--- a/mmi.html
+++ b/mmi.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Monoton&family=Permanent+Marker&display=swap"
       rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFolio</title>
+    <title>PortFolio Rayan Telli</title>
 
   </head>
 
